# ctl-utilities

./: .gitignore  CMakeLists.txt  README.md
Controller-afb/: CMakeLists.txt  ctl-binding.c  filescan-utils.c
afb-source/: CMakeLists.txt  ctl-apidef.h  ctl-binding.h  ctl-dispatch.c  ctl-timer.c
conf.d/cmake/: 00-debian-specific.cmake  config.cmake
conf.d/packaging/: agl-afb-controller.dsc  agl-afb-controller.spec  debian.changelog  debian.control  debian.rules
conf.d/project/json.d/: README.md  onload-audio-control.json  onload-daemon-sample.json  onload-daemon-standalone.json
conf.d/project/lua.d/: doscript-helloworld.lua  onload-aaaa-01-controls.lua  onload-aaaa-02-timer.lua  onload-daemon-01-init.lua  onload-daemon-03-controls.lua  onload-daemon-04-oncall.lua  onload-daemon-10-event.lua
conf.d/project/lua.d/standalone-sample/: onload-daemon-01.lua
ctl-binding/: CMakeLists.txt  ctl-apidef.h  ctl-apidef.json  ctl-binding.c  ctl-binding.h  ctl-dispatch.c  ctl-lua.c  ctl-policy.c
ctl-dispatch/: CMakeLists.txt  ctl-action.c  ctl-config.h  ctl-timer.h
ctl-lib/: CMakeLists.txt  ctl-action.c  ctl-config.c  ctl-config.h  ctl-control.c  ctl-event.c  ctl-lua.c  ctl-lua.h  ctl-onload.c  ctl-plugin.c  ctl-plugin.h  ctl-timer.c  ctl-timer.h
ctl-plugin/: CMakeLists.txt  ctl-plugin-sample.c
htdocs/: README.md  index.html
nbproject/: configurations.xml  project.xml
